<resources>
    <string name="app_name">MedicineAndGroceryApp</string>
    <string-array name="grocormedi">
        <item>Grocery Stores</item>
        <item>Medicine Stores</item>
    </string-array>
    <string-array name="category">
        <item>Grocery Stores</item>
        <item>Medical Store</item>
        <item>Bakery</item>
    </string-array>
    <string name="api_key">AIzaSyDAYCACxPH8ccR_jO3Q1sn2YiBjOoJ1QL8</string>
    <string name="title_activity_categories_and_items">CategoriesAndItems</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_make_store">Make a Store</string>
    <string name="menu_become_delivery_person">Become a Delivery Person</string>
    <string name="user_cart">Cart</string>
    <string name="title_activity_deliveryperson_navigation">deliveryperson_navigation</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_store_navigation_bar">store_navigation_bar</string>
    <string-array name="store_type">
        <item>Bakery Store</item>
        <item>Medical Store</item>
        <item>Grocery Store</item>
    </string-array>
</resources>
